# Projects

./: README.md
Minesweep/src/: Board.java  Cell.java  CellDataForGame.java  ControlPanel.java  Executor.java  ResizingBehaviourObject.java  UserInterface.java  clickbehaviour.java  informationFeed.java
bookRepo/: README.txt
bookRepo/bookRepoPyServer/: server.py
bookRepo/bookRepoSite/bookRepo/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
bookRepo/bookRepoSite/bookRepo/e2e/src/: app.e2e-spec.ts
bookRepo/bookRepoSite/bookRepo/src/: index.html
bookRepo/bookRepoSite/bookRepo/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
bookRepo/bookRepoSite/bookRepo/src/app/book-search/: book-search.component.ts  book-search1.component.ts
bookRepo/bookRepoSite/bookRepo/src/app/search-bar/: search-bar.component.css  search-bar.component.html  search-bar.component.ts
bookRepo/bookRepoSite/bookRepo/src/app/selectmulti/: selectmulti.component.css  selectmulti.component.html  selectmulti.component.ts  (+1 more)
slice_pizzabot/: README.md  setup.cfg  setup.py
slice_pizzabot/src/pizzapackage/: pizza.sh  pizza_test.py  pizza_test.sh
slice_pizzabot/src/pizzapackage/pizza/: pizza_test.py
slice_pizzabot/src/pizzapackage/pizza/src/: pizza.py
slice_pizzabot/src/pizzapackage_matpower.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
slice_pizzabot/src/pythontest_pkg_matpower.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
workstationSetup/: .bash_profile  .bashrc  .gitconfig  .vimrc
workstationSetup/.vim/: .netrwhist
