[metadata]
# replace with your username:
name = pizza-delivery-pkg-matpower
version = 0.0.1
author = Matthew Power
author_email = mjmpower06@gmail.com
description = For slice interview process - Matthew
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matpower-dev/Projects/tree/main/slice_pizzabot
project_urls =
    Bug Tracker = https://github.com/matpower-dev/Projects/tree/main/slice_pizzabot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages=find:
python_requires = >=3.6
scripts =
    src/pizzapackage/pizza_test.sh
    src/pizzapackage/pizza.sh

[options.packages.find]
where = src
